[package]
name = "ansi_term"
description = "Library for ANSI terminal colours and styles (bold, underline)"

authors = [ "ogham@bsago.me", "Ryan Scheel (Havvy) <ryan.havvy@gmail.com>", "Josh Triplett <josh@joshtriplett.org>" ]
documentation = "https://docs.rs/ansi_term"
homepage = "https://github.com/ogham/rust-ansi-term"
license = "MIT"
readme = "README.md"
version = "0.12.1"
repository = "https://github.com/ogham/rust-ansi-term"

[lib]
name = "ansi_term"

[features]
derive_serde_style = ["serde"]

[dependencies.serde]
version = "1.0.90"
features = ["derive"]
optional = true

[target.'cfg(target_os="windows")'.dependencies.windows-sys]
version = "0.59"
features = ["Win32_System_Console", "Win32_Storage_FileSystem", "Win32_Security"]

[dev-dependencies]
doc-comment = "0.3"
regex = "1.1.9"

[dev-dependencies.serde_json]
version = "1.0.39"
